Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObject.quorum
class Main
    action Main
        Object v
        v:SetValue()
        Test(v)
    end

    action Test(text var)
    end
end
